--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>{{rpgname}} RPG</h1>
+    <h1>{{rpgname}}</h1>
     <p><a href="/login">Entrar</a></p>
     <p><a href="/register">Registrar</a></p>
 </body>
